--- a/Proyecto final pantera/index.html
+++ b/Proyecto final pantera/index.html
@@ -40,7 +40,7 @@
   <div id="carouselExample" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="imagenes" src="Disponible-06.jpg" class="d-block w-100" alt="...">
+        <img class="imagenes" src="Disponible-05.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img class="imagenes" src="Disponible-07.jpg" class="d-block w-100" alt="...">
@@ -95,54 +95,51 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="card">
-              <img
-                src="https://mdbcdn.b-cdn.net/img/new/standard/nature/181.webp"
+              <img class="productos"
+                src="Disponible-09.jpg"
                 class="card-img-top"
                 alt="Waterfall"
               />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Protector para audifonos inalambricos</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk
-                  of the card's content.
+                 Un protector para audifonos inalambricos con tematica de ositos cariñositos
                 </p>
-                <a href="#!" data-mdb-ripple-init class="btn btn-primary">Button</a>
+                <a href="#!" data-mdb-ripple-init class="btn btn-primary">Ver producto</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 d-none d-lg-block">
             <div class="card">
-              <img
-                src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp"
+              <img class="productos"
+                src="Disponible-06.jpg"
                 class="card-img-top"
                 alt="Sunset Over the Sea"
               />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title"> Bolso de malla</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk
-                  of the card's content.
+                  Un bolso de mano en forma de malla para llevar con cualquier outfit 
                 </p>
-                <a href="#!" data-mdb-ripple-init class="btn btn-primary">Button</a>
+                <a href="#!" data-mdb-ripple-init class="btn btn-primary">Ver producto</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 d-none d-lg-block">
             <div class="card">
-              <img
-                src="https://mdbcdn.b-cdn.net/img/new/standard/nature/183.webp"
+              <img class="productos"
+                src="Disponible-08.jpg"
                 class="card-img-top"
                 alt="Sunset over the Sea"
               />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Par de medias</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk
-                  of the card's content.
+                  Un par de medias con promocion con tematica de ositos cariñositos
                 </p>
-                <a href="#!" data-mdb-ripple-init class="btn btn-primary">Button</a>
+                <a href="#!" data-mdb-ripple-init class="btn btn-primary">Ver producto</a>
               </div>
             </div>
           </div>
